[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/Dark.theme" type="Theme" id=1]
[ext_resource path="res://theme/Fonts/UbuntuFont.res" type="DynamicFont" id=2]
[ext_resource path="res://theme/Icons/Pictoicon_Gear.Png" type="Texture" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Interface" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 720.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Interface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 720.0
rect_min_size = Vector2( 480, 720 )

[node name="ColorRect" type="ColorRect" parent="Interface/VBoxContainer"]
margin_right = 480.0
margin_bottom = 120.0
rect_min_size = Vector2( 480, 120 )
color = Color( 0.12549, 0.12549, 0.121569, 1 )

[node name="ServerDisplay" type="RichTextLabel" parent="Interface/VBoxContainer/ColorRect"]
margin_top = 43.0
margin_right = 480.0
margin_bottom = 83.0
rect_min_size = Vector2( 480, 40 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]ACT 1 SCENE 1 PAGE 12[/center]"
text = "ACT 1 SCENE 1 PAGE 12"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="ScrollContainer" type="ScrollContainer" parent="Interface/VBoxContainer"]
margin_top = 123.0
margin_right = 480.0
margin_bottom = 603.0
rect_min_size = Vector2( 480, 480 )

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/VBoxContainer/ScrollContainer"]
margin_right = 480.0
margin_bottom = 966.0

[node name="TrackerList" type="ItemList" parent="Interface/VBoxContainer/ScrollContainer/HBoxContainer"]
margin_right = 480.0
margin_bottom = 966.4
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 480, 480 )
items = [ "Act 1 Scene 1 Page 12", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false, "Item 7", null, false, "Item 8", null, false, "Item 9", null, false, "Item 10", null, false, "Item 11", null, false, "Item 12", null, false, "Item 13", null, false, "Item 14", null, false, "Item 15", null, false, "Item 16", null, false, "Item 17", null, false, "Item 18", null, false, "Item 19", null, false, "Item 20", null, false, "Item 21", null, false, "Item 22", null, false, "Item 23", null, false, "Item 24", null, false, "Item 25", null, false, "Item 26", null, false, "Item 27", null, false, "Item 28", null, false, "Item 29", null, false, "Item 30", null, false, "Item 31", null, false, "Item 32", null, false, "Item 33", null, false, "Item 34", null, false, "Item 35", null, false, "Item 36", null, false, "Item 37", null, false, "Item 38", null, false, "Item 39", null, false ]
auto_height = true
fixed_column_width = 480

[node name="ColorRect2" type="ColorRect" parent="Interface/VBoxContainer"]
margin_top = 606.0
margin_right = 480.0
margin_bottom = 726.0
rect_min_size = Vector2( 480, 120 )
color = Color( 0.12549, 0.12549, 0.121569, 1 )

[node name="GoButton" type="Button" parent="Interface/VBoxContainer/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -40.0
margin_right = 212.0
margin_bottom = 40.0
text = "GO"

[node name="SettingsButton" type="TextureButton" parent="Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )

[connection signal="item_selected" from="Interface/VBoxContainer/ScrollContainer/HBoxContainer/TrackerList" to="." method="_on_TrackerList_item_selected"]
[connection signal="pressed" from="Interface/VBoxContainer/ColorRect2/GoButton" to="." method="_on_GoButton_pressed"]
[connection signal="pressed" from="Interface/SettingsButton" to="." method="_on_SettingsButton_pressed"]
